--- a/styles/index.css
+++ b/styles/index.css
@@ -20,6 +20,13 @@ main{
 .hero-container div{
   width: 50%;
 }
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .hero-main-text{
   font-weight: 900;
   font-size: 48px;
@@ -27,7 +34,6 @@ main{
   margin-bottom: 1rem;
 }
 .hero-secondary-text{
-  margin: 0;
   font-weight: 300;
   font-size: 18px;
   color: #E5E7EB;
@@ -38,7 +44,7 @@ main{
   height: 100%;
   object-fit: contain;
 }
-.hero-text .view-more-button{
+ .view-more-button{
   background-color: #3882F6;
   border-radius: 10px;
   padding: .5rem 1.5rem;
@@ -46,8 +52,9 @@ main{
   border: none;
   font-size: 1rem;
   font-family: inherit;
-  margin: 1rem auto;
+  width: fit-content;
   cursor: pointer;
+  text-decoration: none;
 }
 .sign-up-button-container .sign-up-button{
   background-color: #3882F6;
@@ -80,6 +87,7 @@ main{
   font-size: 36px;
   font-weight: 900;
   color: #1F2937;
+  margin: 2rem auto;
 }
 .preview-images{
   display: flex;
